@@ -8,14 +8,14 @@
  <property name="content_meta_type">Promotion</property>
  <property name="product">EEAContentTypes</property>
  <property name="factory">addPromotion</property>
- <property name="immediate_view">base_view</property>
+ <property name="immediate_view">promotion_view</property>
  <property name="global_allow">False</property>
  <property name="filter_content_types">False</property>
  <property name="allowed_content_types"/>
  <property name="allow_discussion">False</property>
- <property name="default_view">base_view</property>
+ <property name="default_view">promotion_view</property>
  <property name="view_methods">
-  <element value="base_view"/>
+  <element value="promotion_view"/>
  </property>
  <property name="default_view_fallback">False</property>
  <alias from="(Default)" to="(dynamic view)"/>
